--- a/views/circle.erb
+++ b/views/circle.erb
@@ -46,7 +46,7 @@
         </li>
         <span class="refine-tag">同好会</span>
         </a>
-        <a href="/pcdoukoukai"><li class="each-circle dou">
+        <a href="/vr"><li class="each-circle dou">
             <h3 class="circle_p_name green"><span>D-2</span>VRジェットコースター（PC）
             </h3>
             <div class="circle-bot">
