--- a/views/vr.erb
+++ b/views/vr.erb
@@ -24,7 +24,7 @@
 <div class="circle-main">
    <div class="circle-top">
       <div class="circle-images">
-         <img src="/assets/images/circle/vr.erbp" alt="vr">
+         <img src="/assets/images/circle/vr.webp" alt="vr">
       </div>
       <p class="circle-name">
         VRジェットコースター（PC同好会）
