ルーコンサート追加

--- a/views/timetable.erb
+++ b/views/timetable.erb
@@ -57,7 +57,7 @@
             <td></td>
             <td rowspan="8" class="time-event-left">
               <span class="time-start">9:00~</span>
-              <a href="/ongakukai">個人演奏１</a>
+              <a href="/ongakukai">個人演奏Ⅰ</a>
               <span class="time-end">~9:40</span>
             </td>
             <td></td>
@@ -149,7 +149,7 @@
           <tr>
             <td rowspan="5" class="time-event-left">
               <span class="time-start">9:45~</span>
-              <span class="time-end">~10:00</span>
+              <span class="time-end">~10:10</span>
               <a href="/ongakukai">1年クラス合唱</a></td>
             <td></td>
             <td></td>
@@ -160,12 +160,15 @@
           <tr>
             <td></td>
             <td></td>
-            <td></td>
+            <td rowspan="10" class="time-event">
+              <span class="time-start">9:50~</span>
+              <span class="time-end">~10:40</span>
+              <a href="/annsannburubu"><span style="font-size: 20px">Ⅰ部</span><br><br>Sax2  点描の歌<br><br>Trp4  彼は海賊<br><br>Cl  ホワイトノイズ<br><Br>Trb4<br>宇宙戦艦ヤマト<br><br>Hr3<br><small>アルプスの少女ハイジ</small><br><br>W.W6<br>天空の城ラピュタ</a>
+            </td>
             <td></td>
             <td></td>
           </tr>
           <tr>
-            <td></td>
             <td></td>
             <td></td>
             <td></td>
@@ -179,7 +182,6 @@
             <td></td>
             <td></td>
             <td></td>
-            <td></td>
             <th rowspan="12" class="time-timer">10:00</th>
           </tr>
           <tr>
@@ -188,14 +190,11 @@
             <td></td>
             <td></td>
             <td></td>
-            <td></td>
           </tr>
           <tr>
             <td></td>
             <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td></td>            <td></td>
             <td></td>
             <td></td>
             <td></td>
@@ -205,9 +204,8 @@
             <td rowspan="9" class="time-event">
               <span class="time-start">10:15~</span>
               <span class="time-end">~11:00</span>
-              <a href="/ongakukai">個人演奏２</a>
+              <a href="/ongakukai">個人演奏Ⅱ</a>
             </td>
-            <td></td>
             <td></td>
             <td></td>
             <td></td>
@@ -215,7 +213,6 @@
             <td></td>
           </tr>
           <tr>
-            <td></td>
             <td></td>
             <td></td>
             <td></td>
@@ -227,7 +224,6 @@
             <td></td>
           </tr>
           <tr>
-            <td></td>
             <td></td>
             <td></td>
             <td></td>
@@ -245,6 +241,11 @@
             <td></td>
             <td></td>
             <td></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
             <td></td>
           </tr>
           <tr>
@@ -255,15 +256,6 @@
             <td></td>
           </tr>
           <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-          <tr>
-            <td></td>
             <td></td>
             <td></td>
             <td></td>
@@ -373,7 +365,7 @@
             <td rowspan="7" class="time-event-left">
               <span class="time-start">11:40~</span>
               <span class="time-end">~12:15</span>
-              <a href="/ongakukai">個人演奏３</a></td>
+              <a href="/ongakukai">個人演奏Ⅲ</a></td>
             <td rowspan="2" class="time-event">
               <span class="time-start">11:40~</span>
               <span class="time-end">~11:50</span>
@@ -664,7 +656,11 @@
           <tr>
             <td></td>
             <td></td>
-            <td></td>
+            <td rowspan="10" class="time-event">
+              <span class="time-start">14:10~</span>
+              <span class="time-end">~15:00</span>
+              <a href="/annsannburubu"><span style="font-size: 20px">Ⅱ部</span><Br><br>恋<br><br>A列車で行こう<br><br>たなばた<br><br>We Are Confidence Man<br><Br>美しい鰭<br><br>可愛くてごめん<br><br>プロヴァンスの風</a>
+            </td>
           </tr>
           <tr>
             <td></td>
@@ -674,10 +670,8 @@
               <a href="/tyuuou">Gangnam style</a></td>
             <td></td>
             <td></td>
-            <td></td>
           </tr>
           <tr>
-            <td></td>
             <td></td>
             <td></td>
             <td></td>
@@ -689,7 +683,6 @@
               <span class="time-end">~14:30</span>
               <a href="/tyuuou">メドレー</a></td>
             <td></td>
-            <td></td>
             <td rowspan="8" class="time-event">
               <span class="time-start">14:20~</span>
               <span class="time-end">~15:00</span>
@@ -697,7 +690,6 @@
             <td></td>
           </tr>
           <tr>
-            <td></td>
             <td></td>
             <td></td>
             <td></td>
@@ -713,7 +705,6 @@
             <td></td>
             <td></td>
             <td></td>
-            <td></td>
           </tr>
           <tr>
             <td></td>
@@ -721,10 +712,8 @@
             <td></td>
             <td></td>
             <td></td>
-            <td></td>
           </tr>
           <tr>
-            <td></td>
             <td></td>
             <td></td>
             <td></td>
@@ -741,7 +730,6 @@
             <td></td>
             <td></td>
             <td></td>
-            <td></td>
           </tr>
           <tr>
             <td></td>
@@ -749,10 +737,8 @@
             <td></td>
             <td></td>
             <td></td>
-            <td></td>
           </tr>
           <tr>
-            <td></td>
             <td></td>
             <td></td>
             <td></td>
