サークルページの変換完了しました

--- a/views/circle.erb
+++ b/views/circle.erb
@@ -30,7 +30,7 @@
             </h3>
             <div class="circle-bot">
             <p>
-              <img src="/assets/images/circle/pc.png" class="circle-img">
+              <img src="/assets/images/circle/pc.webp" class="circle-img">
             </p>
             <div class="booth-detail">
             <ul class="circle-ul">
@@ -72,7 +72,7 @@
             </h3>
             <div class="circle-bot">
             <p>
-              <img src="/assets/images/circle/ongakukai.jpg" class="circle-img">
+              <img src="/assets/images/circle/ongakukai.webp" class="circle-img">
             </p>
             <div class="booth-detail">
             <ul class="circle-ul">
@@ -93,7 +93,7 @@
             </h3>
             <div class="circle-bot">
             <p>
-              <img src="/assets/images/circle/ennniti.png" class="circle-img">
+              <img src="/assets/images/circle/ennniti.webp" class="circle-img">
             </p>
             <div class="booth-detail">
             <ul class="circle-ul">
@@ -114,7 +114,7 @@
             </h3>
             <div class="circle-bot">
             <p>
-              <img src="/assets/images/circle/koukou.png" class="circle-img">
+              <img src="/assets/images/circle/koukou.webp" class="circle-img">
             </p>
             <div class="booth-detail">
             <ul class="circle-ul">
@@ -135,7 +135,7 @@
             </h3>
             <div class="circle-bot">
             <p>
-              <img src="/assets/images/circle/kissa.png" class="circle-img">
+              <img src="/assets/images/circle/kissa.webp" class="circle-img">
             </p>
             <div class="booth-detail">
             <ul class="circle-ul">
@@ -156,7 +156,7 @@
             </h3>
             <div class="circle-bot">
             <p>
-              <img src="/assets/images/circle/yatai.png" class="circle-img">
+              <img src="/assets/images/circle/yatai.webp" class="circle-img">
             </p>
             <div class="booth-detail">
             <ul class="circle-ul">
@@ -177,7 +177,7 @@
             </h3>
             <div class="circle-bot">
             <p>
-              <img src="/assets/images/circle/unndouzyou.png" class="circle-img">
+              <img src="/assets/images/circle/unndouzyou.webp" class="circle-img">
             </p>
             <div class="booth-detail">
             <ul class="circle-ul">
@@ -198,7 +198,7 @@
             </h3>
             <div class="circle-bot">
             <p>
-              <img src="/assets/images/circle/jetto.png" class="circle-img">
+              <img src="/assets/images/circle/jetto.webp" class="circle-img">
             </p>
             <div class="booth-detail">
             <ul class="circle-ul">
@@ -219,7 +219,7 @@
             </h3>
             <div class="circle-bot">
             <p>
-              <img src="/assets/images/circle/dassyutu.png" class="circle-img">
+              <img src="/assets/images/circle/dassyutu.webp" class="circle-img">
             </p>
             <div class="booth-detail">
             <ul class="circle-ul">
@@ -240,7 +240,7 @@
             </h3>
             <div class="circle-bot">
             <p>
-              <img src="/assets/images/circle/kounainazotoki.png" class="circle-img">
+              <img src="/assets/images/circle/kounainazotoki.webp" class="circle-img">
             </p>
             <div class="booth-detail">
             <ul class="circle-ul">
@@ -261,7 +261,7 @@
             </h3>
             <div class="circle-bot">
             <p>
-              <img src="/assets/images/circle/kounaisousyoku.png" class="circle-img">
+              <img src="/assets/images/circle/kounaisousyoku.webp" class="circle-img">
             </p>
             <div class="booth-detail">
             <ul class="circle-ul">
@@ -282,7 +282,7 @@
             </h3>
             <div class="circle-bot">
             <p>
-              <img src="/assets/images/circle/monyumento.png" class="circle-img">
+              <img src="/assets/images/circle/monyumento.webp" class="circle-img">
             </p>
             <div class="booth-detail">
             <ul class="circle-ul">
@@ -303,7 +303,7 @@
             </h3>
             <div class="circle-bot">
             <p>
-              <img src="/assets/images/circle/monyumento.jpg" class="circle-img">
+              <img src="/assets/images/circle/monyumento.webp" class="circle-img">
             </p>
             <div class="booth-detail">
             <ul class="circle-ul">
@@ -324,7 +324,7 @@
             </h3>
             <div class="circle-bot">
             <p>
-              <img src="/assets/images/circle/tyuuou.png" class="circle-img">
+              <img src="/assets/images/circle/tyuuou.webp" class="circle-img">
             </p>
             <div class="booth-detail">
             <ul class="circle-ul">
@@ -366,7 +366,7 @@
             </h3>
             <div class="circle-bot">
             <p>
-              <img src="/assets/images/circle/shashinn.png" class="circle-img">
+              <img src="/assets/images/circle/shashinn.webp" class="circle-img">
             </p>
             <div class="booth-detail">
             <ul class="circle-ul">
@@ -387,7 +387,7 @@
             </h3>
             <div class="circle-bot">
             <p>
-              <img src="/assets/images/circle/bizyutu.jpg" class="circle-img">
+              <img src="/assets/images/circle/bizyutu.webp" class="circle-img">
             </p>
             <div class="booth-detail">
             <ul class="circle-ul">
@@ -408,7 +408,7 @@
             </h3>
             <div class="circle-bot">
             <p>
-              <img src="/assets/images/circle/shougi.png" class="circle-img">
+              <img src="/assets/images/circle/shougi.webp" class="circle-img">
             </p>
             <div class="booth-detail">
             <ul class="circle-ul">
@@ -430,7 +430,7 @@
             </h3>
             <div class="circle-bot">
             <p>
-              <img src="/assets/images/circle/buturi.png" class="circle-img">
+              <img src="/assets/images/circle/buturi.webp" class="circle-img">
             </p>
             <div class="booth-detail">
             <ul class="circle-ul">
@@ -451,7 +451,7 @@
             </h3>
             <div class="circle-bot">
             <p>
-              <img src="/assets/images/circle/tireki.png" class="circle-img">
+              <img src="/assets/images/circle/tireki.webp" class="circle-img">
             </p>
             <div class="booth-detail">
             <ul class="circle-ul">
@@ -472,7 +472,7 @@
             </h3>
             <div class="circle-bot">
             <p>
-              <img src="/assets/images/circle/bunngeitosho.png" class="circle-img">
+              <img src="/assets/images/circle/bunngeitosho.webp" class="circle-img">
             </p>
             <div class="booth-detail">
             <ul class="circle-ul">
@@ -493,7 +493,7 @@
             </h3>
             <div class="circle-bot">
             <p>
-              <img src="/assets/images/circle/tenmon.png" class="circle-img">
+              <img src="/assets/images/circle/tenmon.webp" class="circle-img">
             </p>
             <div class="booth-detail">
             <ul class="circle-ul">
@@ -514,7 +514,7 @@
             </h3>
             <div class="circle-bot">
             <p>
-              <img src="/assets/images/circle/kagaku.png" class="circle-img">
+              <img src="/assets/images/circle/kagaku.webp" class="circle-img">
             </p>
             <div class="booth-detail">
             <ul class="circle-ul">
@@ -535,7 +535,7 @@
             </h3>
             <div class="circle-bot">
             <p>
-              <img src="/assets/images/circle/ess.png" class="circle-img">
+              <img src="/assets/images/circle/ess.webp" class="circle-img">
             </p>
             <div class="booth-detail">
             <ul class="circle-ul">
@@ -556,7 +556,7 @@
             </h3>
             <div class="circle-bot">
             <p>
-              <img src="/assets/images/circle/seibutubu.png" class="circle-img">
+              <img src="/assets/images/circle/seibutubu.webp" class="circle-img">
             </p>
             <div class="booth-detail">
             <ul class="circle-ul">
@@ -577,7 +577,7 @@
             </h3>
             <div class="circle-bot">
             <p>
-              <img src="/assets/images/circle/annsannburu.png" class="circle-img">
+              <img src="/assets/images/circle/annsannburu.webp" class="circle-img">
             </p>
             <div class="booth-detail">
             <ul class="circle-ul">
@@ -598,7 +598,7 @@
             </h3>
             <div class="circle-bot">
             <p>
-              <img src="/assets/images/circle/suugaku.png" class="circle-img">
+              <img src="/assets/images/circle/suugaku.webp" class="circle-img">
             </p>
             <div class="booth-detail">
             <ul class="circle-ul">
@@ -619,7 +619,7 @@
             </h3>
             <div class="circle-bot">
             <p>
-              <img src="/assets/images/circle/kizyutu.png" class="circle-img">
+              <img src="/assets/images/circle/kizyutu.webp" class="circle-img">
             </p>
             <div class="booth-detail">
             <ul class="circle-ul">
@@ -640,7 +640,7 @@
             </h3>
             <div class="circle-bot">
             <p>
-              <img src="/assets/images/circle/tetudou.png" class="circle-img">
+              <img src="/assets/images/circle/tetudou.webp" class="circle-img">
             </p>
             <div class="booth-detail">
             <ul class="circle-ul">
@@ -661,7 +661,7 @@
             </h3>
             <div class="circle-bot">
             <p>
-              <img src="/assets/images/circle/ryokou.png" class="circle-img">
+              <img src="/assets/images/circle/ryokou.webp" class="circle-img">
             </p>
             <div class="booth-detail">
             <ul class="circle-ul">
@@ -703,7 +703,7 @@
             </h3>
             <div class="circle-bot">
             <p>
-              <img src="/assets/images/circle/keion.png" class="circle-img">
+              <img src="/assets/images/circle/keion.webp" class="circle-img">
             </p>
             <div class="booth-detail">
             <ul class="circle-ul">
