全部webpに変えました確認してほしいです

--- a/views/annsannburubu.erb
+++ b/views/annsannburubu.erb
@@ -24,7 +24,7 @@
 <div class="circle-main">
    <div class="circle-top">
       <div class="circle-images">
-         <img src="/assets/images/circle/annsannburu.png" alt="アンサンブル部">
+         <img src="/assets/images/circle/annsannburu.webp" alt="アンサンブル部">
       </div>
       <h1 class="circle-name">
         アンサンブル部
