--- a/views/bizyutubu.erb
+++ b/views/bizyutubu.erb
@@ -24,7 +24,7 @@
 <div class="circle-main">
    <div class="circle-top">
       <div class="circle-images">
-         <img src="/assets/images/circle/bizyutu.jpg" alt="美術部">
+         <img src="/assets/images/circle/bizyutu.webp" alt="美術部">
       </div>
       <h1 class="circle-name">
         美術部
