--- a/views/bunngeibutosho.erb
+++ b/views/bunngeibutosho.erb
@@ -24,7 +24,7 @@
 <div class="circle-main">
    <div class="circle-top">
       <div class="circle-images">
-         <img src="/assets/images/circle/bunngeitosho.png" alt="文芸部図書委員">
+         <img src="/assets/images/circle/bunngeitosho.webp" alt="文芸部図書委員">
       </div>
       <h1 class="circle-name">
         文芸部図書委員
