--- a/views/buturibu.erb
+++ b/views/buturibu.erb
@@ -24,7 +24,7 @@
 <div class="circle-main">
    <div class="circle-top">
       <div class="circle-images">
-         <img src="/assets/images/circle/buturi.png" alt="物理部">
+         <img src="/assets/images/circle/buturi.webp" alt="物理部">
       </div>
       <p class="circle-name">
         物理部
