--- a/views/dassyutu.erb
+++ b/views/dassyutu.erb
@@ -24,7 +24,7 @@
 <div class="circle-main">
    <div class="circle-top">
       <div class="circle-images">
-         <img src="/assets/images/circle/dassyutu.png" alt="脱出ゲーム">
+         <img src="/assets/images/circle/dassyutu.webp" alt="脱出ゲーム">
       </div>
       <h1 class="circle-name">
         脱出ゲーム
@@ -69,7 +69,7 @@
 ４回目　12:40～13:20<br>
 ５回目　13:30～14:10<Br>
 ６回目　14:20～15:00<Br><Br>
-<img src="assets\images\circle\dassyutu1.jpg" class="circle-images"><br>
+<img src="assets\images\circle\dassyutu1.webp" class="circle-images"><br>
 《とある秘密倉庫からの脱出》<br>
 ボスからの指令、それは、宝石を盗み出すこと。あなたは華麗に宝石を盗み出すことが出来るのか<br>
 <br>
@@ -85,7 +85,7 @@
 ６回目　14:00～14:20<br>
 ７回目　14:40～15:00<br>
 <br>
-<img src="assets\images\circle\dassyutu2.jpg.png" class="circle-images"><br>
+<img src="assets\images\circle\dassyutu2.jpg.webp" class="circle-images"><br>
 〘注意事項〙<br>
 ・私物(時計、文房具含む)の使用は出来ません。一部、写真撮影が可能なものがあります。<br>
 ・体験出来る人数が少ない為、両方の脱出ゲームを体験することは出来ません。ただし、開始時間になっても空席がある場合は体験できます。<BR>
