--- a/views/ennniti.erb
+++ b/views/ennniti.erb
@@ -24,7 +24,7 @@
 <div class="circle-main">
    <div class="circle-top">
       <div class="circle-images">
-         <img src="/assets/images/circle/ennniti.png" alt="縁日">
+         <img src="/assets/images/circle/ennniti.webp" alt="縁日">
       </div>
       <h1 class="circle-name">
         縁日
