--- a/views/jetto.erb
+++ b/views/jetto.erb
@@ -24,7 +24,7 @@
 <div class="circle-main">
    <div class="circle-top">
       <div class="circle-images">
-         <img src="/assets/images/circle/jetcoaster.png" alt="ジェットコースター">
+         <img src="/assets/images/circle/jetcoaster.webp" alt="ジェットコースター">
       </div>
       <h1 class="circle-name">
         ジェットコースター
