--- a/views/koukounyuusi.erb
+++ b/views/koukounyuusi.erb
@@ -24,7 +24,7 @@
 <div class="circle-main">
    <div class="circle-top">
       <div class="circle-images">
-         <img src="/assets/images/circle/koukounyuusi.png" alt="高校入試">
+         <img src="/assets/images/circle/koukounyuusi.webp" alt="高校入試">
       </div>
       <h1 class="circle-name">
         高校入試
