--- a/views/monyumennto.erb
+++ b/views/monyumennto.erb
@@ -24,7 +24,7 @@
 <div class="circle-main">
    <div class="circle-top">
       <div class="circle-images">
-         <img src="/assets/images/circle/monyumento.png" alt="モニュメント">
+         <img src="/assets/images/circle/monyumento.webp" alt="モニュメント">
       </div>
       <p class="circle-name">
         モニュメント
