--- a/views/tirekibu.erb
+++ b/views/tirekibu.erb
@@ -24,7 +24,7 @@
 <div class="circle-main">
    <div class="circle-top">
       <div class="circle-images">
-         <img src="/assets/images/circle/tireki.png" alt="地歴部">
+         <img src="/assets/images/circle/tireki.webp" alt="地歴部">
       </div>
       <p class="circle-name">
         地歴部
