--- a/views/unndouzyou.erb
+++ b/views/unndouzyou.erb
@@ -24,7 +24,7 @@
 <div class="circle-main">
    <div class="circle-top">
       <div class="circle-images">
-         <img src="/assets/images/circle/unndouzyou.png" alt="運動場企画">
+         <img src="/assets/images/circle/unndouzyou.webp" alt="運動場企画">
       </div>
       <h1 class="circle-name">
         運動場企画
