--- a/views/annnai.erb
+++ b/views/annnai.erb
@@ -24,7 +24,7 @@
 <div class="circle-main">
    <div class="circle-top">
       <div class="circle-images">
-         <img src="/assets/images/circle/kagaku.png" alt="案内">
+         <img src="/assets/images/circle/kagaku.webp" alt="案内">
       </div>
       <h1 class="circle-name">
         案内
