--- a/views/kagakubu.erb
+++ b/views/kagakubu.erb
@@ -24,7 +24,7 @@
 <div class="circle-main">
    <div class="circle-top">
       <div class="circle-images">
-         <img src="/assets/images/circle/kagaku.png" alt="化学部">
+         <img src="/assets/images/circle/kagaku.webp" alt="化学部">
       </div>
       <h1 class="circle-name">
         化学部
