--- a/views/keionndoukoukai.erb
+++ b/views/keionndoukoukai.erb
@@ -24,7 +24,7 @@
 <div class="circle-main">
    <div class="circle-top">
       <div class="circle-images">
-         <img src="/assets/images/circle/keionn.png" alt="化学部">
+         <img src="/assets/images/circle/keionn.webp" alt="化学部">
       </div>
       <h1 class="circle-name">
         軽音同好会
