--- a/views/kizyutudoukoukai.erb
+++ b/views/kizyutudoukoukai.erb
@@ -24,7 +24,7 @@
 <div class="circle-main">
    <div class="circle-top">
       <div class="circle-images">
-         <img src="/assets/images/circle/kizyutu.png" alt="奇術部">
+         <img src="/assets/images/circle/kizyutu.webp" alt="奇術部">
       </div>
       <h1 class="circle-name">
         奇術部
