--- a/views/kounainazotoki.erb
+++ b/views/kounainazotoki.erb
@@ -24,7 +24,7 @@
 <div class="circle-main">
    <div class="circle-top">
       <div class="circle-images">
-         <img src="/assets/images/circle/kounainazotoki.png" alt="校内謎解き">
+         <img src="/assets/images/circle/kounainazotoki.webp" alt="校内謎解き">
       </div>
       <h1 class="circle-name">
         校内謎解き
