--- a/views/ongakukai.erb
+++ b/views/ongakukai.erb
@@ -24,7 +24,7 @@
 <div class="circle-main">
    <div class="circle-top">
       <div class="circle-images">
-         <img src="/assets/images/circle/ongakukai.jpg" alt="音楽会">
+         <img src="/assets/images/circle/ongakukai.webp" alt="音楽会">
       </div>
       <h1 class="circle-name">
         音楽会
