--- a/views/pcdoukoukai.erb
+++ b/views/pcdoukoukai.erb
@@ -24,7 +24,7 @@
 <div class="circle-main">
    <div class="circle-top">
       <div class="circle-images">
-         <img src="/assets/images/circle/pc.png" alt="物理部">
+         <img src="/assets/images/circle/pc.webp" alt="物理部">
       </div>
       <p class="circle-name">
         講義（PC同好会）
