--- a/views/ryokoudoukoukai.erb
+++ b/views/ryokoudoukoukai.erb
@@ -24,7 +24,7 @@
 <div class="circle-main">
    <div class="circle-top">
       <div class="circle-images">
-         <img src="/assets/images/circle/ryokou.png" alt="旅行同好会">
+         <img src="/assets/images/circle/ryokou.webp" alt="旅行同好会">
       </div>
       <h1 class="circle-name">
         旅行同好会
