--- a/views/shasinnbu.erb
+++ b/views/shasinnbu.erb
@@ -24,7 +24,7 @@
 <div class="circle-main">
    <div class="circle-top">
       <div class="circle-images">
-         <img src="/assets/images/circle/shashinn.png" alt="写真部">
+         <img src="/assets/images/circle/shashinn.webp" alt="写真部">
       </div>
       <h1 class="circle-name">
         写真部
