--- a/views/sugakudoukoukai.erb
+++ b/views/sugakudoukoukai.erb
@@ -24,7 +24,7 @@
 <div class="circle-main">
    <div class="circle-top">
       <div class="circle-images">
-         <img src="/assets/images/circle/suugaku.png" alt="数学同好会">
+         <img src="/assets/images/circle/suugaku.webp" alt="数学同好会">
       </div>
       <h1 class="circle-name">
         数学同好会
