--- a/views/tyuuou.erb
+++ b/views/tyuuou.erb
@@ -24,7 +24,7 @@
 <div class="circle-main">
    <div class="circle-top">
       <div class="circle-images">
-         <img src="/assets/images/circle/tyuuou.png" alt="中央ステージ">
+         <img src="/assets/images/circle/tyuuou.webp" alt="中央ステージ">
          </div>
          <h1 class="circle-name">
            中央ステージ
