--- a/views/yatai.erb
+++ b/views/yatai.erb
@@ -24,7 +24,7 @@
 <div class="circle-main">
    <div class="circle-top">
       <div class="circle-images">
-         <img src="/assets/images/circle/yatai.png" alt="屋台">
+         <img src="/assets/images/circle/yatai.webp" alt="屋台">
       </div>
       <h1 class="circle-name">
         屋台
