--- a/views/kateika.erb
+++ b/views/kateika.erb
@@ -35,7 +35,7 @@
          <a href="/map" class="meta-button">マップ上で確認</a>
       </div>
    </div>
-   <p class="circle-text">一年生が作った家庭科作品を展示しています</p>
+   <p class="circle-text">実習で制作した調理実習に使う帽子と夏休みに取り組んだ「朝食作り」のレポートを展示しています。</p>
 
 
 </div>
