全てのページを一般公開

--- a/views/message.erb
+++ b/views/message.erb
@@ -59,6 +59,9 @@
     ぜひ、思う存分楽しんでいってください！</p>
     <h2>実行副委員長 嶋本 葵</h2>
 
+    <p class="message-p">"そんなに恐いか？「新時代」が‼"
+私たちが鳴りを潜め、作り上げた新時代を是非お楽しみください！Hello!! NewERA!!</p>
+  <h2>実行副委員長 大木 慶祐</h2>
     <p class="message-p">
     みなさん、こんにちは！甲陽学院高等学校生徒会長の近江佑眞です。今年も音展の季節がやってきました！生徒会一同、心から歓迎します！
 　実はこれはChatGPTという対話型の生成AIが考えた挨拶文の一節である。どこかでみたことがあるような文字の羅列が続く。生成AIも所詮過去の膨大なデータのツギハギにしか過ぎないのだ。
