--- a/views/member.erb
+++ b/views/member.erb
@@ -40,7 +40,7 @@
         <tr><td>高校入試</td><td>浦田晃成・川合・大木・赤曽部</td></tr>
         <tr><td>中央ステージ</td><td>大原尚士・實方・西阪</td></tr>
         <tr><td>校内装飾</td><td>渋谷興央・西阪</td></tr>
-        <tr><td>モニュメント</td><td>大原己成・西阪・山本</td></tr>
+        <tr><td>モニュメント</td><td>大原己成・山本・西阪</td></tr>
         <tr><td>広報</td><td>延原剛行・田畑・田中<small>新</small>・西本・赤曽部</td></tr>
         <tr><td>案内</td><td>河合柊吾・吉田<small>麻</small></td></tr>
         <tr><td>音楽会</td><td>疋田紘青</td></tr>
