--- a/views/message.erb
+++ b/views/message.erb
@@ -54,7 +54,7 @@
 コロナという暗がりからの「夜明け」を経て、僕達は「新時代」への第一歩となる</p>
     <h2>実行副委員長 田中 新之助</h2>
     
-    <p class="message-p">今年の音展のテーマは「New Era（新たな時代）」。
+    <p class="message-p">今年の音展のテーマは「New ERA（新たな時代）」。
     コロナが収まり、規制が緩和されてきたので例年の形に戻しつつ、従来にはなかった新しい試みに挑戦し、在校生とご来場の皆様が共に楽しむことができるような魅力的で楽しい音展を提供することを目標に、在校生と共に力を合わせて取り組んできました。
     ぜひ、思う存分楽しんでいってください！</p>
     <h2>実行副委員長 嶋本 葵</h2>
