--- a/views/preindex.erb
+++ b/views/preindex.erb
@@ -68,7 +68,7 @@
     <li> 食堂では食券をお買い求めください。金券はご利用いただけません。 </li>
     <li> 未使用の金券の払い戻しは、金券販売所にて、14時20分から15時20分に行います。 </li>
   </ul>
-  <h1>その他</h1>
+  <h1>そのほか</h1>
   <ul>
     <li>校内は全面禁煙です。喫煙はお控えください。</li>
     <li>講堂、校舎には、上履きに履き替えてご入場ください。</li>
