--- a/public/assets/css/map.css
+++ b/public/assets/css/map.css
@@ -52,6 +52,15 @@
     color: #e2e2e2;
     text-align: center;
 }
+.map-felement{
+    position: absolute;
+    /* background-color: #000b; */
+    cursor: pointer;
+    display: grid;
+    place-content: center;
+    /* color: #e2e2e2; */
+    text-align: center;
+}
 .map-link-room{
     position: absolute;
     padding: 0px 8px;
@@ -68,6 +77,13 @@
     font-size: 10px;
     word-wrap: break-word;
     display:flex;
+}
+.ftext{
+    /* line-height: 1.2; */
+    font-size: 2rem;
+    word-wrap: break-word;
+    display:flex;
+    font-family: "makinas-4-square";
 }
 .circle_p_name{
     margin-bottom: 20px;
