--- a/views/map.erb
+++ b/views/map.erb
@@ -50,6 +50,12 @@
                     <div class="map-image">
                     <img src="/assets/images/map/1.webp" class="each-map">
                     <div class="booth-container">
+                    <div class="map-felement" style="top:0%;right: -5%;width: 20%; height: 20%;">
+                                    <div class="map-link-room"></div>
+                                    <div class="ftext2">
+                                        運動場企画→
+                                    </div>
+                                </div>
                     <div class="map-felement" style="top:0;left: -18%;width: 20%; height: 20%;">
                             <div class="map-link-room"></div>
                             <div class="ftext">
@@ -96,6 +102,12 @@
                         <div class="map-image">
                             <img src="/assets/images/map/2.webp" class="each-map">
                             <div class="booth-container">
+                            <div class="map-felement" style="top:0;left: -18%;width: 20%; height: 20%;">
+                            <div class="map-link-room"></div>
+                            <div class="ftext">
+                                南2F
+                            </div>
+                        </div>
                                 <div class="map-element" style="top: 0px;left: 23.5294%;width: 11.7647%;height: 16%;">
                                     <div class="map-link-room">3-D</div>
                                     <div class="map-link-name">
@@ -127,6 +139,12 @@
                                      保健室
                                     </div>
                                 </div>
+                                <div class="map-felement" style="bottom:0%;left: -18%;width: 20%; height: 20%;">
+                                    <div class="map-link-room"></div>
+                                    <div class="ftext">
+                                        北1F
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -135,6 +153,12 @@
                         <div class="map-image">
                             <img src="/assets/images/map/3.webp" class="each-map">
                             <div class="booth-container">
+                            <div class="map-felement" style="top:0;left: -18%;width: 20%; height: 20%;">
+                            <div class="map-link-room"></div>
+                            <div class="ftext">
+                                南3F
+                            </div>
+                        </div>
                                 <div class="map-element" style="top: 0px;left: 23.5294%;width: 11.7647%;height: 16%;">
                                     <div class="map-link-room">2-D</div>
                                     <div class="map-link-name">
@@ -184,6 +208,12 @@
                                     <h3 class="circle_p_name yellow"><span>C-6</span></h3>
                                     </div>
                                 </div>
+                                <div class="map-felement" style="bottom:0%;left: -18%;width: 20%; height: 20%;">
+                                    <div class="map-link-room"></div>
+                                    <div class="ftext">
+                                        北2F
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -192,6 +222,12 @@
                         <div class="map-image">
                             <img src="/assets/images/map/4.webp" class="each-map">
                             <div class="booth-container">
+                            <div class="map-felement" style="top:0;left: -18%;width: 20%; height: 20%;">
+                            <div class="map-link-room"></div>
+                            <div class="ftext">
+                                南4F
+                            </div>
+                        </div>
                                 <div class="map-element" style="top: 0px;left: 23.5294%;width: 11.7647%;height: 16%;">
                                     <div class="map-link-room">1-D</div>
                                     <div class="map-link-name">
@@ -243,6 +279,12 @@
                                     <h3 class="circle_p_name yellow"><span>C-2</span></h3>
                                     </div>
                                 </div>
+                                <div class="map-felement" style="bottom:0%;left: -18%;width: 20%; height: 20%;">
+                                    <div class="map-link-room"></div>
+                                    <div class="ftext">
+                                        北3F
+                                    </div>
+                                </div>
                             </div>
                             </div>
                         </div>
@@ -263,6 +305,12 @@
                                     <div class="map-link-name">
                                     <h3 class="circle_p_name yellow"><span>C-9</span></h3>
                                     <h3 class="circle_p_name blue"><span>B-4</span></h3>
+                                    </div>
+                                </div>
+                                <div class="map-felement" style="bottom:0%;left: -18%;width: 20%; height: 20%;">
+                                    <div class="map-link-room"></div>
+                                    <div class="ftext">
+                                        北4F
                                     </div>
                                 </div>
                             </div>
