--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,6 @@
    <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-VBWLSF46BW"></script>
+ <link rel="stylesheet" href="/assets/css/style.css">
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
