--- a/views/preindex.erb
+++ b/views/preindex.erb
@@ -22,6 +22,7 @@
       })(document);
     </script>
     <script src="/assets/javascript/javascript.js"></script>
+     <link rel="stylesheet" href="/assets/css/prestyle.css">
     <div id="wrapper">
       <div class="toptitle">
         <p>第76回</p>
@@ -31,14 +32,14 @@
       </div>
       <div class="image">
         <img src="/assets/images/logo_white.webp" class="logo">
-        <img src="/assets/images/logo_background.gif" class="logo-gif">
+        <%# <img src="/assets/images/logo_background.gif" class="logo-gif"> %>
         <%# <img src="/assets/images/kari.jpg" class="logo-gif"> %>
       </div>
     </div>
 
     <div class="date">
-     <p class="main-date">9.23</p>
-     <p class="sub-date">9:00~15:00</p>
+     <%# <p class="main-date">9.23</p> %>
+     <%# <p class="sub-date">9:00~15:00</p> %>
     </div>
 <div class="count">
   <div class="count-div1">
