--- a/views/vr.erb
+++ b/views/vr.erb
@@ -36,4 +36,5 @@
       </div>
    </div>
      <p class="circle-text">VRコースターは学校の３Dモデルの中をジェットコースターで走り回る物です。昨年のものよりパワーアップして帰ってきたジェットコースターをぜひ体験してください。今回は学校の細部の表現をこだわっただけでなく、風の音やトロッコの音も作ったので心に余裕のある方は注目してみてください。</p>
+     <p class="vr-text">※酔いやすいためご注意ください<p>
 </div>
